--- a/days/3/style.css
+++ b/days/3/style.css
@@ -57,6 +57,8 @@ main {
     font-size: 1.5rem;
     color: #666;
     margin: 2rem 0;
+    font-style: italic;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
 }
 
 .profile-picture {
